--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,16 @@ button:focus-visible {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  cursor: url('/cursor.png') 16 16, auto;
+}
+
+a, button, [role="button"] {
+  cursor: url('/cursor-pointer.png') 16 16, pointer;
+}
+
+body.loading,
+body.loading * {
+  cursor: url('/cursor-loading.gif') 16 16, wait !important;
 }
 
 html, body, #root {
